Rename november-squad -> november

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "november-squad"
+name = "november"
 version = "0.0.1"
 authors = ["Alexander Campbell <alexanderhcampbell@gmail.com>"]
 
