Move engine into its own crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,5 @@ name = "november"
 version = "0.0.1"
 authors = ["Alexander Campbell <alexanderhcampbell@gmail.com>"]
 
-[dependencies]
-sdl2 = "0.0.18"
-
-[dependencies.gl]
-git = "https://github.com/bjz/gl-rs"
+[dependencies.simple]
+path = "simple"
