--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "november"
+name = "simple"
 version = "0.0.1"
 authors = ["Alexander Campbell <alexanderhcampbell@gmail.com>"]
 
-[dependencies.simple]
-path = "simple"
+[dependencies]
+sdl2 = "0.0.18"
