--- a/november/Cargo.toml
+++ b/november/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "simple"
+name = "november"
 version = "0.0.1"
 authors = ["Alexander Campbell <alexanderhcampbell@gmail.com>"]
 
-[dependencies]
-sdl2 = "0.0.18"
+[dependencies.simple]
+path = ".."
