Add PPA for libsdl2
Borrowed from the Travis yml at https://github.com/SFTtech/openage

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: rust
 
 install:
+    - sudo apt-add-repository --yes ppa:zoogie/sdl2-snapshots       # libsdl2
     - sudo apt-get install libsdl2-dev
 
