Implement new Image class with .from_file()
This change required adding a dependency on libsdl2-image-dev.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,5 @@ language: rust
 install:
     - sudo apt-add-repository --yes ppa:zoogie/sdl2-snapshots       # libsdl2
     - sudo apt-get update -qq
-    - sudo apt-get install libsdl2-dev
+    - sudo apt-get install libsdl2-dev libsdl2-image-dev
 
