Update simple to compile with modern Rust-SDL2

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 [package]
 name = "simple"
 description = "The simplest graphics library, inspired by LOVE2D"
-version = "0.2.2"
+version = "0.3.0"
 repository = "https://github.com/alexandercampbell/simple"
 keywords = ["simple","graphics","2D"]
 authors = ["Alexander Campbell <alexanderhcampbell@gmail.com>"]
@@ -12,16 +12,14 @@ readme = "README.md"
 [lib]
 name = "simple"
 path = "src/lib.rs"
-crate-type = ["static"]
 
 [dependencies]
-sdl2 = "0.6.1" # Surprise. It's actually an SDL2 wrapper.
-sdl2-sys = "0.6.1"
 libc = "0.1.8"
 rand = "0.3.8"
 num = "0.1.24"
 
-[dependencies.sdl2_image]
-git = "https://github.com/xsleonard/rust-sdl2_image"
-version = "0.2.4"
+[dependencies.sdl2]
+version = "0.32.1"
+default-features = false
+features = ["image", "unsafe_textures"]
 
